# wait-for-it

./: README.md  pyproject.toml  wait-for-it.sh
.github/workflows/: test.yml
tests/: test_wait_for_it.py
